--- a/src/app/cats-selector/cats-selector.component.html
+++ b/src/app/cats-selector/cats-selector.component.html
@@ -15,7 +15,7 @@
 
     <div class="result-main">
         <div *ngIf="!selected || selected.length == 0" class="selected-breeds">
-            <h3>Ви не обрали жодного котика, тому ми покажемо вам кілька випадкових =)</h3>
+            <h3>Ви не обрали жодного котика, тому ми покажемо вам кілька випадкових</h3>
         </div>
         <div *ngIf="selected" class="selected-breeds">
             <div class="breed" *ngFor="let breedName of selected">
