--- a/src/app/cats-selector/cats-selector.component.css
+++ b/src/app/cats-selector/cats-selector.component.css
@@ -11,9 +11,17 @@
     flex-direction: column;
 }
 
+.input {
+    width: 100%;
+}
+
 .breeds-list {
     height: 70vh;
     overflow-y: scroll;
+}
+
+mat-list-option {
+    left: 0;
 }
 
 button {
@@ -29,24 +37,54 @@ button {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    max-height: 75vh;
+    overflow: auto;
+
 }
+
+.random-cats {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-height: 75vh;
+    overflow: auto;
+}
+
 
 .breed {
     display: flex;
     flex-direction: column;
-    padding: 10px;
     border: 1px solid grey;
     margin: 5px;
+    border-radius: 3px;
+    overflow: hidden;
+}
+
+.random-cat {
+
+    margin: 5px;
+    border-radius: 3px;
+    overflow: hidden;
 }
 
 .breed-photo {
     width: 300px;
     height: 300px;
-    border-radius: 30px;
+    border-bottom: 1px solid grey;
+}
+
+.random-photo {
+    width: 300px;
+    height: 300px;
 }
 
 .breed-name {
-    margin-top: 15px;
     margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+.center-text {
+    text-align: center;
 }
