filler-header + clear/select all buttons
added header component, can be filled with some nav etc. added 'clear all', 'select all' and 'select all filtered' buttons

--- a/src/app/cats-selector/cats-selector.component.css
+++ b/src/app/cats-selector/cats-selector.component.css
@@ -17,8 +17,10 @@
 
 .breeds-list {
     height: 70vh;
-    overflow-y: scroll;
+    min-height: 70vh;
+    overflow-y: auto;
 }
+
 
 button {
     margin-top: 15px;
