paginator bug fixed
empty screed when change page size th way that your current page is not exists now

--- a/src/app/cats-selector/cats-selector.component.html
+++ b/src/app/cats-selector/cats-selector.component.html
@@ -52,7 +52,8 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <pagination-controls (pageChange)="page = $event" previousLabel="" nextLabel=""></pagination-controls>
+            <pagination-controls (pageChange)="paginatorFixedResize($event)" previousLabel="" nextLabel="">
+            </pagination-controls>
         </div>
     </div>
 </div>
