paginator position and color changed

--- a/src/app/cats-selector/cats-selector.component.css
+++ b/src/app/cats-selector/cats-selector.component.css
@@ -1,4 +1,4 @@
-.main-main {
+.main {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -28,7 +28,7 @@ button {
 
 
 .result-main {
-    width: 60%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -93,6 +93,10 @@ button {
 .pagination {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: end;
     margin-top: 20px;
+}
+
+pagination-controls ::ng-deep .ngx-pagination .current {
+    background: #673ab7;
 }
