--- a/src/app/cats-selector/cats-selector.component.html
+++ b/src/app/cats-selector/cats-selector.component.html
@@ -1,4 +1,4 @@
-<div class="main-main">
+<div class="main">
     <div class="search-main">
         <app-cats-searcher class="input" (search)="onSearch($event)"></app-cats-searcher>
         <h3>Породи:</h3>
