button replaced, no-photo error handled

--- a/src/app/cats-selector/cats-selector.component.css
+++ b/src/app/cats-selector/cats-selector.component.css
@@ -22,9 +22,7 @@
 }
 
 
-button {
-    margin-top: 15px;
-}
+
 
 
 .result-main {
@@ -74,10 +72,22 @@ button {
     border-bottom: 1px solid grey;
 }
 
+.nophoto {
+    width: 300px;
+    height: 300px;
+    border-bottom: 1px solid grey;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
 .random-photo {
     width: 300px;
     height: 300px;
 }
+
 
 .breed-name {
     margin: auto;
@@ -93,7 +103,7 @@ button {
 .pagination {
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: flex-end;
     margin-top: 20px;
 }
 
