--- a/src/app/cats-selector/cats-selector.component.html
+++ b/src/app/cats-selector/cats-selector.component.html
@@ -2,6 +2,15 @@
     <div class="search-main">
         <app-cats-searcher class="input" (search)="onSearch($event)"></app-cats-searcher>
         <h3>Породи:</h3>
+        <button *ngIf="selected.length>0" mat-raised-button color="primary"
+            (click)="breedsSet.clear(); selected = []">Очистити
+            вибір</button>
+        <button *ngIf="selected.length==0 && filteredBreeds.length == breedsNames.length" mat-raised-button
+            color="primary" (click)="selectAllBreeds()">Обрати
+            всі</button>
+        <button *ngIf="selected.length==0 && filteredBreeds.length<breedsNames.length && filteredBreeds.length !=0"
+            mat-raised-button color="primary" (click)="selectAllBreeds()">Обрати
+            всі відфільтровані</button>
         <mat-selection-list *ngIf="filteredBreeds.length>0" (selectionChange)="selectionChange($event)"
             [(ngModel)]="selected" class="breeds-list">
             <mat-list-option *ngFor="let breedName of filteredBreeds" [value]="breedName" checkboxPosition="before"
@@ -12,14 +21,7 @@
         <div *ngIf="filteredBreeds.length == 0" class="breeds-list">
             <h4>За введеними вами данними не знайдено жодної породи. =(</h4>
         </div>
-        <button *ngIf="selected.length>0" mat-raised-button color="primary"
-            (click)="breedsSet.clear(); selected = []">Очистити вибір</button>
-        <button *ngIf="selected.length==0 && filteredBreeds.length == breedsNames.length" mat-raised-button
-            color="primary" (click)="selectAllBreeds()">Обрати
-            всі</button>
-        <button *ngIf="selected.length==0 && filteredBreeds.length<breedsNames.length && filteredBreeds.length !=0"
-            mat-raised-button color="primary" (click)="selectAllBreeds()">Обрати
-            всі відфільтровані</button>
+
 
 
     </div>
@@ -38,7 +40,12 @@
 
             <div class="breed"
                 *ngFor="let breedName of selected | paginate: {itemsPerPage: pageSize, currentPage: page}">
-                <img class="breed-photo" src="{{getPhoto(breedName)}}" alt="{{breedName}}">
+                <img *ngIf="getPhoto(breedName) != ''" class="breed-photo" src="{{getPhoto(breedName)}}"
+                    alt="{{breedName}}">
+                <div *ngIf="getPhoto(breedName) == ''" class="nophoto">
+                    <span>Фото відсутнє, спробуйте знайти в інтернеті, використовуючи назву
+                        породи</span>
+                </div>
                 <span class="breed-name">{{breedName}}</span>
             </div>
 
